passport and grant work

--- a/package.json
+++ b/package.json
@@ -30,11 +30,17 @@
   },
   "homepage": "https://github.com/dolanmiu/LoL-LaMetric#readme",
   "dependencies": {
+    "@types/express-session": "0.0.32",
     "@types/morgan": "^1.7.32",
+    "@types/passport": "^0.3.2",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "express-session": "^1.15.0",
+    "grant-express": "^3.7.0",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "phantom": "^4.0.0",
     "request": "^2.79.0",
     "winston": "^2.3.1"
   },
