--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.15.0",
     "grant-express": "^3.7.0",
     "morgan": "^1.7.0",
+    "nightmare": "^2.9.1",
     "node-linkedin": "^0.5.4",
     "passport": "^0.3.2",
     "passport-linkedin-oauth2": "^1.4.1",
