--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/dolanmiu/LoL-LaMetric#readme",
   "dependencies": {
     "@types/express-session": "0.0.32",
+    "@types/github": "0.0.0",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^4.7.5",
     "@types/morgan": "^1.7.32",
@@ -41,6 +42,7 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
+    "github": "^8.2.1",
     "grant-express": "^3.7.0",
     "moment": "^2.17.1",
     "mongoose": "^4.8.1",
