--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
   },
   "homepage": "https://github.com/dolan-bio/Server#readme",
   "dependencies": {
+    "@types/body-parser": "^1.16.4",
+    "@types/compression": "0.0.33",
+    "@types/express": "^4.0.36",
     "@types/express-session": "1.15.0",
     "@types/github": "7.1.0",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^4.7.5",
     "@types/morgan": "^1.7.32",
     "@types/nightmare": "^1.6.30",
+    "@types/node": "^8.0.7",
     "@types/passport": "^0.3.2",
+    "@types/request": "0.0.45",
     "@types/winston": "^2.2.0",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
@@ -50,11 +55,6 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@types/body-parser": "0.0.33",
-    "@types/compression": "0.0.33",
-    "@types/express": "^4.0.35",
-    "@types/node": "^7.0.0",
-    "@types/request": "0.0.39",
     "rimraf": "^2.5.4",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5"
