--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
-    "github": "^8.2.1",
+    "github": "^9.2.0",
     "grant-express": "^3.7.0",
     "moment": "^2.17.1",
     "mongoose": "^4.8.1",
@@ -50,13 +50,13 @@
     "nightmare": "^2.9.1",
     "node-linkedin": "^0.5.4",
     "passport": "^0.3.2",
-    "passport-linkedin-oauth2": "^1.4.1",
     "request": "^2.79.0",
+    "rxjs": "^5.4.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "rimraf": "^2.5.4",
     "tslint": "^5.4.3",
-    "typescript": "^2.1.5"
+    "typescript": "2.3.4"
   }
 }
