--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/compression": "0.0.33",
     "@types/express": "^4.0.36",
     "@types/express-session": "1.15.0",
+    "@types/google-images": "^2.1.0",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^4.7.18",
     "@types/morgan": "^1.7.32",
