--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@dolan-bio/tips": "https://github.com/dolan-bio/Tips.git",
     "@types/body-parser": "^1.16.4",
+    "@types/cheerio": "^0.22.2",
     "@types/compression": "0.0.33",
     "@types/express": "^4.0.36",
     "@types/express-session": "1.15.0",
@@ -40,6 +41,7 @@
     "@types/request": "0.0.45",
     "@types/winston": "^2.2.0",
     "body-parser": "^1.16.0",
+    "cheerio": "^1.0.0-rc.2",
     "compression": "^1.6.2",
     "docx": "^2.1.0",
     "express": "^4.14.0",
