Add node debug for VSCode

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "pretest": "tsc --p .",
     "test": "npm run lint",
-    "prestart": "rimraf dist && tsc --p .",
+    "build": "rimraf dist && tsc --p .",
+    "prestart": "npm run build",
     "start": "node ./dist/index.js",
     "lint": "tslint --project .",
     "mocha": "mocha ./dist/**/*.spec.js"
