--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,12 @@ jspm_packages
 # Build
 dist
 
-# VS Code
-.vscode
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # Local environment variables
 run.bat
